changed compiler dependency to annotationProcessor

--- a/website/index.html
+++ b/website/index.html
@@ -227,7 +227,7 @@ buildscript {
             <pre class="prettyprint">
 dependencies {
   compile 'com.jakewharton:butterknife:8.4.0</span>'
-  compile 'com.jakewharton:butterknife-compiler:8.4.0</em></span>'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0</em></span>'
 }
             </pre>
             <h3 id="license">License</h3>
