Removed comment behind gradle version

--- a/website/index.html
+++ b/website/index.html
@@ -217,7 +217,7 @@ ImageView photo = ButterKnife.findById(view, R.id.photo);</pre>
 buildscript {
   ...
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.2.0'  // 2.2.0 or higher
+    classpath 'com.android.tools.build:gradle:2.2.0'
   }
 }
             </pre>
