Use latest version span

--- a/website/index.html
+++ b/website/index.html
@@ -226,8 +226,8 @@ buildscript {
             <h4>Module-level build.gradle</h4>
             <pre class="prettyprint">
 dependencies {
-  compile 'com.jakewharton:butterknife:8.4.0</span>'
-  annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0</em></span>'
+  compile 'com.jakewharton:butterknife:<span class="version"><em>(latest version)</em></span></span>'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:<span class="version"><em>(latest version)</em></span></em></span>'
 }
             </pre>
             <h3 id="license">License</h3>
