Removed redundant <span> and <em> tags

--- a/website/index.html
+++ b/website/index.html
@@ -226,8 +226,8 @@ buildscript {
             <h4>Module-level build.gradle</h4>
             <pre class="prettyprint">
 dependencies {
-  compile 'com.jakewharton:butterknife:<span class="version"><em>(latest version)</em></span></span>'
-  annotationProcessor 'com.jakewharton:butterknife-compiler:<span class="version"><em>(latest version)</em></span></em></span>'
+  compile 'com.jakewharton:butterknife:<span class="version"><em>(latest version)</em></span>'
+  annotationProcessor 'com.jakewharton:butterknife-compiler:<span class="version"><em>(latest version)</em></span>'
 }
             </pre>
             <h3 id="license">License</h3>
@@ -250,7 +250,7 @@ limitations under the License.</pre>
         </div>
       </div>
     </div>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="static/jquery-maven-artifact.min.js"></script>
     <script src="static/prettify.js"></script>
     <script>
