--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ void onNothingSelected() {
 
             <h3 id="download">Download</h3>
             <h4>Gradle</h4>
-            <pre class="prettyprint">compile 'com.jakewharton:butterknife:<span class="version"><em>(insert latest version)</em></span>'
+            <pre class="prettyprint">implementation 'com.jakewharton:butterknife:<span class="version"><em>(insert latest version)</em></span>'
 annotationProcessor 'com.jakewharton:butterknife-compiler:<span class="version"><em>(insert latest version)</em></span>'</pre>
 
             <h3 id="license">License</h3>
