--- a/website/index.html
+++ b/website/index.html
@@ -51,7 +51,7 @@
   @BindString(R.string.title) String title;
   @BindDrawable(R.drawable.graphic) Drawable graphic;
   @BindColor(R.color.red) int red; // int or ColorStateList field
-  @BindDimen(R.dimen.spacer) Float spacer; // int (for pixel size) or float (for exact value) field
+  @BindDimen(R.dimen.spacer) float spacer; // int (for pixel size) or float (for exact value) field
   // ...
 }</pre>
 
