Close link properly
The anchor was not closed properly 🤦

--- a/website/index.html
+++ b/website/index.html
@@ -24,7 +24,7 @@
         <div class="offset4 span8 main">
           <div class="main-inner">
             <h3 id="deprecation">Deprecation Notice</h3>
-            <p>This tool is now deprecated. Please switch to <a href="https://developer.android.com/topic/libraries/view-binding">view binding<a>. Existing versions will continue to work, obviously, but only critical bug fixes for integration with AGP will be considered. Feature development and general bug fixes have stopped.</p>
+            <p>This tool is now deprecated. Please switch to <a href="https://developer.android.com/topic/libraries/view-binding">view binding</a>. Existing versions will continue to work, obviously, but only critical bug fixes for integration with AGP will be considered. Feature development and general bug fixes have stopped.</p>
             <h3 id="introduction">Introduction</h3>
             <p>Annotate fields with <code>@BindView</code> and a view ID for Butter Knife to find and automatically cast the corresponding view in your layout.</p>
             <pre class="prettyprint">class ExampleActivity extends Activity {
